k8s-rwo-single/app-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: example-website
  name: example-website
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      deployment: example-website
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        alpha.image.policy.openshift.io/resolve-names: '*'
      labels:
        deployment: example-website
    spec:
      volumes:
      - name: htdocs
        persistentVolumeClaim:
          claimName: pvc-htdocs
      containers:
      - image: druptest-nginx:latest
        imagePullPolicy: Always
        name: nginx
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - name: htdocs
          mountPath: "/var/www/html/"
      - image: druptest-php:latest
        imagePullPolicy: Always
        name: php
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - name: htdocs
          mountPath: "/opt/app/htdocs/"
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
