k8s-rwo-single/nginx-route.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: nginx
  labels:
    app: example-website
spec:
  to:
    kind: Service
    name: nginx
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  port:
    targetPort: 8080-tcp
  alternateBackends: []
